--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 	<div id="content">
 		<h1><img src="assets/hana.png" alt="Anya"/></h1>
 		<p id="my_accounts">
-			<a class="link" href="https://twitter.com/adorateurdeloli" target="_blank">Twitter</a>
+			<a class="link" href="https://twitter.com/annagraem_" target="_blank">Twitter</a>
 			<a class="link" href="https://github.com/annagraem" target="_blank">GitHub</a>
 			<a class="link" href="https://www.youtube.com/channel/UCsIfOHp4GBKHFaLyk0YHbRw" target="_blank">Youtube</a>
 			<a class="link fb" href="#iddiscord">Discord</a>
-			<a class="link" href="http://myanimelist.net/profile/OkamiShiranui" target="_blank">MyAnimeList</a>
+			<a class="link" href="http://myanimelist.net/profile/AnnaGraem" target="_blank">MyAnimeList</a>
 			<a class="link" href="http://steamcommunity.com/profiles/76561198025239295/" target="_blank">Steam</a>
 			<a class="link" href="http://osu.ppy.sh/u/2460336" target="_blank">osu!</a>
 		</p>
