update link font and padding

--- a/index.html
+++ b/index.html
@@ -6,20 +6,19 @@
 	<link rel="icon" type="image/png" href="assets/favicon.png" />
 	<title>Anya</title>
 	<link rel="stylesheet" href="styles.css" />
-	<link href='https://fonts.googleapis.com/css?family=Roboto:400,500|Roboto+Condensed' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Patrick+Hand&display=swap" rel="stylesheet">
 </head>
 <body>
-
 	<div id="content">
 		<h1><img src="assets/hana.png" alt="Anya"/></h1>
-		<p id="my_accounts">
-			<a class="link" href="https://twitter.com/annagraem_" target="_blank">Twitter</a>
-			<a class="link" href="https://github.com/annagraem" target="_blank">GitHub</a>
-			<a class="link" href="https://www.youtube.com/channel/UCsIfOHp4GBKHFaLyk0YHbRw" target="_blank">Youtube</a>
-			<a class="link fb" href="#iddiscord">Discord</a>
-			<a class="link" href="http://myanimelist.net/profile/AnnaGraem" target="_blank">MyAnimeList</a>
-			<a class="link" href="http://steamcommunity.com/profiles/76561198025239295/" target="_blank">Steam</a>
-			<a class="link" href="http://osu.ppy.sh/u/2460336" target="_blank">osu!</a>
+		<p>
+			<a href="https://twitter.com/annagraem_" target="_blank">Twitter</a>
+			<a href="https://github.com/annagraem" target="_blank">GitHub</a>
+			<a href="https://www.youtube.com/channel/UCsIfOHp4GBKHFaLyk0YHbRw" target="_blank">Youtube</a>
+			<a class="fb" href="#iddiscord">Discord</a>
+			<a href="http://myanimelist.net/profile/AnnaGraem" target="_blank">MyAnimeList</a>
+			<a href="http://steamcommunity.com/profiles/76561198025239295/" target="_blank">Steam</a>
+			<a href="http://osu.ppy.sh/u/2460336" target="_blank">osu!</a>
 		</p>
 	</div>
 
@@ -29,7 +28,7 @@
 			<p>Discord ID : <br class="small" />Anya#0089</p>
 		</div>
 	</div>
-	
+
 	<!-- fancyBox initialisation -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
